[package]
name = "tcplex"
version = "0.1.0"
edition = "2024"
authors = ["Michael Lohr <michael.lohr@stabl.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.53", features = ["derive", "color", "help", "usage", "suggestions", "wrap_help", "env"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11"
log = "0.4"
color-eyre = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
owo-colors = "4"
backon = "1"

[dev-dependencies]
tempfile = "3"
